package Characters;

import business.CollisionChecker;
import business.Direction;
import business.Position;

public abstract class Entity  {

	protected Position position;
	protected Direction direction;
	protected int advance;

	public Position getPosition(){
		return position;
	}

	public Direction getDirection(){
		return direction;
	}

}