import Characters.Entity;

public class Fruit extends Entity {
	private Level level;

	public Fruit(Level level) {
		this.level = level;
	}
	public void setInitalValues(){

	}
}